--- a/GerenciamentoConsultoria/Views/Shared/_Layout.cshtml
+++ b/GerenciamentoConsultoria/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
+                <a href="Categoria/Listar" class="list-group-item list-group-item-action bg-light">Categoria</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
             </div>
         </div>
